Clean-up and migrated to pure CURL

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,10 @@
         "tuple": "cpp",
         "type_traits": "cpp",
         "typeinfo": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "vector": "cpp",
+        "bitset": "cpp",
+        "cmath": "cpp",
+        "memory": "cpp"
     }
 }
