--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,16 +9,21 @@ enable_language(CXX)
 find_package(Kodi REQUIRED)
 find_package(kodiplatform REQUIRED)
 find_package(p8-platform REQUIRED)
+find_package(CURL REQUIRED)
 
 include_directories(${kodiplatform_INCLUDE_DIRS}
                     ${p8-platform_INCLUDE_DIRS}
-                    ${KODI_INCLUDE_DIR})
+                    ${KODI_INCLUDE_DIR}
+                    ${CURL_INCLUDE_DIR})
 
 set(DEPLIBS ${kodiplatform_LIBRARIES}
-            ${p8-platform_LIBRARIES})
+            ${p8-platform_LIBRARIES}
+            ${CURL_LIBRARY})
+
+
 
 set(PVREMBY_SOURCES src/client.cpp
-                    src/PVREmbyData.cpp)
+                    src/PVREmby.cpp)
 
 build_addon(pvr.emby PVREMBY DEPLIBS)
 
