--- a/pvr.emby/addon.xml.in
+++ b/pvr.emby/addon.xml.in
@@ -4,10 +4,7 @@
   version="0.1"
   name="PVR Emby Client"
   provider-name="EscAbe">
-  <requires>
-    <c-pluff version="0.1"/>
-    <import addon="xbmc.pvr" version="5.2.1"/>
-  </requires>
+  <requires>@ADDON_DEPENDS@</requires>
   <extension
     point="xbmc.pvrclient"
     library_@PLATFORM@="@LIBRARY_FILENAME@"/>
